--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -2,8 +2,6 @@
 
 {% block content %}
     <div class="ui text container">
-      <h1>Hello {% if not (current_user.is_authenticated) %} world {% else %} {{ current_user.full_name() }} {% endif %},</h1>
-      Your role is {{ current_user.role.name }}.
-        
+      <h1>Hello {% if not (current_user.is_authenticated) %} world {% else %} {{ current_user.full_name() }}. Your role is {{ current_user.role.name }}. {% endif %}</h1>
     </div>
 {% endblock %}
