Add form builder to admin dashboard

--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -33,6 +33,8 @@
                                     description='Create a new user account', icon='add user icon') }}
                 {{ dashboard_option('Invite New User', 'admin.invite_user',
                                     description='Invites a new user to create their own account', icon='add user icon') }}
+                {{ dashboard_option('Edit Application Form', 'admin.application_form',
+                                    description='Create the application form for the volunteers', icon='file text outline icon') }}
             </div>
         </div>
     </div>
