Fix referrals database logic; Add support for Account dashboard; Add referrals feature support in dashboard

--- a/app/templates/account/refer_candidate.html
+++ b/app/templates/account/refer_candidate.html
@@ -13,8 +13,8 @@
                 Back to dashboard
             </a>
             <h2 class="ui header">
-                Refer New User
-                <div class="sub header">Refer a new user account</div>
+                Refer a Madaktari Candidate
+                <div class="sub header">Refer a new volunteer</div>
             </h2>
 
             {% set flashes = {
