--- a/app/templates/account/index.html
+++ b/app/templates/account/index.html
@@ -24,17 +24,11 @@
     <div class="ui stackable centered grid container">
         <div class="twelve wide column">
             <h2 class="ui header">
-                Admin Dashboard
+                Account Dashboard
             </h2>
             <div class="ui two column stackable grid">
-                {{ dashboard_option('Registered Users', 'admin.registered_users',
-                                    description='View and manage user accounts', icon='users icon') }}
-                {{ dashboard_option('Add New User', 'admin.new_user',
-                                    description='Create a new user account', icon='add user icon') }}
-                {{ dashboard_option('Invite New User', 'admin.invite_user',
-                                    description='Invites a new user to create their own account', icon='add user icon') }}
                 {{ dashboard_option('Refer a Candidate', 'account.refer_candidate',
-                                    description='Refer a new candidate for consideration', icon='add user icon') }}
+                                    description='Refer a new candidate for consideration', icon='users icon') }}
             </div>
         </div>
     </div>
