accept/reject logic and admin disp resp

--- a/app/templates/admin/create_form.html
+++ b/app/templates/admin/create_form.html
@@ -49,7 +49,7 @@
                     }
 
                     $.ajax(settings).done(function (response) {
-                      console.log(response);
+                      alert('Form has been successfully saved')
                     });
                   }
                 }
