--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -35,6 +35,8 @@
                                     description='Invites a new user to create their own account', icon='add user icon') }}
                 {{ dashboard_option('Edit Application Form', 'admin.create_form_index',
                                     description='Create/Edit the application form for the volunteers', icon='file text outline icon') }}
+                {{ dashboard_option('View Applicant Responses', 'admin.get_responses',
+                                    description='View responses from the volunteers', icon='file text outline icon') }}
             </div>
         </div>
     </div>
