--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="ui text container">
       <h1>Hello {% if not (current_user.is_authenticated) %} world {% else %} {{ current_user.full_name() }}. Your role is {{ current_user.role.name }}. {% endif %}</h1>
-      {% if current_user.is_role("applicant") and content is not none %}
+      {% if current_user.is_authenticated and current_user.is_role("applicant") and content is not none %}
         <div id="fb-render"></div>
         <form id="submitForm">
           <input type='submit' class='btn btn-success' value='Submit Form'/>
