--- a/app/templates/admin/registered_users.html
+++ b/app/templates/admin/registered_users.html
@@ -56,8 +56,8 @@
                             <td>{{ u.last_name }}</td>
                             <td>{{ u.email }}</td>
                             <td class="user role">{{ u.role.name }}</td>
-                            <td> {% for user in u.referrers | user.full_name() %} </td>
-                            <td> {% for user in u.candidates | user.full_name() %} </td>
+                            {# <td> {% for user in u.referrers | user.full_name() %} </td>
+                            <td> {% for user in u.candidates | user.full_name() %} </td> #}
                         </tr>
                     {% endfor %}
                     </tbody>
