Add team creation page

--- a/app/templates/account/index.html
+++ b/app/templates/account/index.html
@@ -31,6 +31,8 @@
                                     description='Refer a new candidate for consideration', icon='add user icon') }}
                 {{ dashboard_option('Find Teammates', 'account.find_teammates',
                                     description='See accepted users to find a teammates', icon='users icon') }}
+                {{ dashboard_option('Create Team', 'account.create_team',
+                                    description='Create a team', icon='users icon') }}
             </div>
         </div>
     </div>
