--- a/app/templates/account/create_team.html
+++ b/app/templates/account/create_team.html
@@ -28,15 +28,14 @@
 
                 {{ f.render_form_field(form.team_members) }}
 
-
                 {{ f.form_message(flashes['error'], header='Something went wrong.', class='error') }}
                 {{ f.form_message(flashes['warning'], header='Check your email.', class='warning') }}
                 {{ f.form_message(flashes['info'], header='Information', class='info') }}
                 {{ f.form_message(flashes['success'], header='Success!', class='success') }}
 
-                {% for field in form | selectattr('type', 'equalto', 'SubmitField') %}
-                    {{ f.render_form_field(field) }}
-                {% endfor %}
+{#                {% for field in form | selectattr('type', 'equalto', 'SubmitField') %}#}
+{#                    {{ f.render_form_field(field) }}#}
+{#                {% endfor %}#}
 
             {{ f.end_form() }}
         </div>
