--- a/app/templates/account/accepted_users.html
+++ b/app/templates/account/accepted_users.html
@@ -42,7 +42,7 @@
                             <td>{{ u.last_name }}</td>
                             <td><a href="mailto:{{u.email}}">{{ u.email }}</td>
                             <td>
-                                <button class="ui button" onclick="add_user_to_team_modal({{ u.full_name() }})">Add to Team</button>
+                                <button class="ui button" onclick="enable_modal('{{ u.full_name() }}', {{ u.id }})">Add to Team</button>
                             </td>
                         </tr>
                     {% endfor %}
@@ -57,29 +57,40 @@
         <div class="header">
             Add Volunteer to Team
         </div>
-        <div class="ui segment">
-            <div class="ui form">
-                <div class="field">
-                    <label>Team</label>
-                    <select multiple="" class="ui dropdown" onchange="check_for_new_team(this.value)">>
-                        <option value="">Select Team</option>
-                        <option value="new_team">Create New Team</option>
-                        {% for t in teams %}
-                            <option value="{{ t.id }}">{{ t.team_name }}</option>
-                        {%  endfor %}
-                    </select>
-                <div class="field">
-                    <label>Name of New Team</label>
-                    <input type="text" name="new_team_name">
-                </div>
-                <div class="field">
-                    <label>Email Message for <span id="user_to_add">Volunteer</span></label>
-                    <input type="text" name="email" placeholder="Message TODO">
-                </div>
-                <input class="ui button" type="submit" value="Confirm">
-                </div>
+        <br/>
+        <div class="ui grid">
+            <div class="two wide column"></div>
+            <div class="ten wide column">
+                <form class="ui form" action="{{ url_for('account.add_to_team') }}" methods="POST">
+                    <input type="hidden" name="user_id" id="user_id_input">
+                    <div class="field">
+                        <label>Team</label>
+                        <select name="team_id" class="ui dropdown" onchange="check_for_new_team(this.value)">
+                            <option value="">Select Team</option>
+                            <option value="new_team">Create New Team</option>
+                            {% for t in teams %}
+                                <option value="{{ t.id }}">{{ t.team_name }}</option>
+                            {%  endfor %}
+                        </select>
+                    </div>
+                    <br/>
+                    <div class="field" id="new_team_name_input">
+                        <label>Name of New Team</label>
+                        <input type="text" name="new_team_name">
+                    </div>
+                    <br/>
+                    <div class="field">
+                        <label>Email Message for <span id="user_to_add">Volunteer</span></label>
+                        <textarea name="email_content"></textarea>
+                    </div>
+                    <br/>
+                    <input class="ui button" type="submit" value="Confirm" >
+                    <br/>
+                </form>
             </div>
+            <div class="two wide column"></div>
         </div>
+    <br/>
     </div>
 
 
@@ -109,22 +120,19 @@
         });
 
         // Check if new team
+        $("#new_team_name_input").hide();
         function check_for_new_team(selected_value) {
-            if (selected_value == "new_team") {
-
+            if (selected_value === "new_team") {
+                $("#new_team_name_input").show();
+            } else {
+                $("#new_team_name_input").hide();
             }
         }
 
-        function
-
-
-
-    </script>
-    <script type="text/javascript">
-    // modal logic
-     $('.ui.modal').modal('show');
-    function enable_modal(user_to_add) {
-        $('.ui.modal').modal('show');
-    }
+        function enable_modal(user_fullname, user_id) {
+            $('.ui.modal').modal('show');
+            $('#user_to_add').text(user_fullname);
+            $('#user_id_input').attr("value", user_id);
+        }
     </script>
 {% endblock %}
