--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -1,72 +1,77 @@
 {% extends 'layouts/base.html' %}
-
+{% import 'macros/form_macros.html' as f %}
+{% import 'macros/check_password.html' as check %}
 {% block content %}
-    <div class="ui text container">
-      <h1>Hello {% if not (current_user.is_authenticated) %} world {% else %} {{ current_user.full_name() }}. Your role is {{ current_user.role.name }}. {% endif %}</h1>
-      {% if current_user.is_authenticated %} 
-      {% if current_user.is_role("applicant") and content is not none %}
-        <div id="fb-render"></div>
-        <form id="submitForm">
-          <input type='submit' class='btn btn-success' value='Submit Form'/>
-        </form>
-        <script src="http://formbuilder.online/assets/js/form-render.min.js"></script>
-        <script>
-          jQuery(function($) {
-            var fbRender = document.getElementById('fb-render');
-            var formData = {{ content | safe }}
-            var formRenderOpts = {
-              formData
-            };
-            $(fbRender).formRender(formRenderOpts);
-            $("#submitForm").submit(function(e) {
-              e.preventDefault();
-              var o = {};
-              var a = $("#fb-render :input").serializeArray();
-              console.log(a)
-              $.each(a, function() {
-                if (o[this.name] !== undefined) {
-                  if (!o[this.name].push) {
-                    o[this.name] = [o[this.name]];
-                  }
-                  o[this.name].push(this.value || '');
-                }
-                else {
-                  o[this.name] = this.value || '';
-                }
-              });
-              var settings = {
-                  "async": true,
-                  "crossDomain": true,
-                  "url": "/submit-form",
-                  "method": "POST",
-                  "headers": {
-                    "content-type": "application/json",
-                    "cache-control": "no-cache",
-                  },
-                  "processData": false,
-                  "data": JSON.stringify(o)
-              };
-              $.ajax(settings).done(function (response) {
-                alert("successfully submitted form");
-                location.reload()
-              });
-            });
-          });
-        </script>
-        {% elif current_user.is_role("pending") %}
-          <h1>Application Responses</h1>
-          <a href="{{ url_for('main.edit_form') }}">Remove and Edit Form Responses</a>
-          <div class="twelve wide column">
-            {% for f in form_resp_obj %}
-            <div>
-              <h2><strong>{{ loop.index }}. {{ f['label'] }}</strong></h2>
-              {% if f['resp'] is string %} <h4>{{ f['resp'] }}</h4> {% else %} <h4> {% for r in f['resp'] %} <p> {{ r }} </p> {% endfor %} </h4> {% endif %}
+    <div class="ui grid container">
+        <div class="eight wide computer sixteen wide mobile centered column">
+
+            {% set flashes = {
+                'error':   get_flashed_messages(category_filter=['form-error']),
+                'warning': get_flashed_messages(category_filter=['form-check-email']),
+                'info':    get_flashed_messages(category_filter=['form-info']),
+                'success': get_flashed_messages(category_filter=['form-success'])
+            } %}
+
+            <div class="ui top attached tabular menu">
+                <a class="item active" data-tab="register-tab">Sign Up</a>
+                <a class="item" data-tab="login-tab">Login</a>
             </div>
-            <br><br>
-            {% endfor %}
-          </div>
-          {% endif %}
-        {% endif %}
-        
+
+            <div class="ui bottom attached tab segment active" data-tab="register-tab">
+                <h2 class="ui dividing header">Create an account</h2>
+
+                {{ f.begin_form(registration_form, flashes) }}
+
+                <div class="two fields">
+                    {{ f.render_form_field(registration_form.first_name) }}
+                    {{ f.render_form_field(registration_form.last_name) }}
+                </div>
+
+                {{ f.render_form_field(registration_form.email) }}
+
+                <div class="two fields">
+                    {{ f.render_form_field(registration_form.password) }}
+                    {{ f.render_form_field(registration_form.password2) }}
+                </div>
+
+                {{ f.form_message(flashes['error'], header='Something went wrong.', class='error') }}
+                {{ f.form_message(flashes['warning'], header='Check your email.', class='warning') }}
+                {{ f.form_message(flashes['info'], header='Information', class='info') }}
+                {{ f.form_message(flashes['success'], header='Success!', class='success') }}
+
+                {% for field in registration_form | selectattr('type', 'equalto', 'SubmitField') %}
+                    {{ f.render_form_field(field) }}
+                {% endfor %}
+
+                {{ f.end_form(registration_form) }}
+            </div>
+
+            <div class="ui bottom attached tab segment" data-tab="login-tab">
+                <h2 class="ui dividing header">Log in</h2>
+
+                {{ f.begin_form(login_form, flashes) }}
+                    {{ f.render_form_field(login_form.email) }}
+                    {{ f.render_form_field(login_form.password) }}
+                    <div class="ui two column grid">
+                        {{ f.render_form_field(login_form.remember_me, extra_classes='column') }}
+                        <div class="right aligned column">
+                            <a href="{{ url_for('account.reset_password_request') }}">Forgot password?</a>
+                        </div>
+                    </div>
+
+                    {{ f.form_message(flashes['error'], header='Something went wrong.', class='error') }}
+                    {{ f.form_message(flashes['warning'], header='Check your email.', class='warning') }}
+                    {{ f.form_message(flashes['info'], header='Information', class='info') }}
+                    {{ f.form_message(flashes['success'], header='Success!', class='success') }}
+
+                    {{ f.render_form_field(login_form.submit) }}
+                {{ f.end_form(login_form) }}
+            </div>
+        </div>
     </div>
+    <script>
+        $('.menu .item')
+            .tab()
+        ;
+    </script>
 {% endblock %}
