--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -12,13 +12,13 @@
                                     description='View and manage user accounts', icon='users icon') }}
                 {{ d.dashboard_option('Add New User', 'admin.new_user',
                                     description='Create a new user account', icon='add user icon') }}
-                {{ dashboard_option('Invite New User', 'admin.invite_user',
+                {{ d.dashboard_option('Invite New User', 'admin.invite_user',
                                     description='Invites a new user to create their own account', icon='add user icon') }}
                 {{ d.dashboard_option('Refer a Candidate', 'account.refer_candidate',
                                     description='Refer a new candidate for consideration', icon='add user icon') }}
                 {{ d.dashboard_option('Edit Application Form', 'admin.create_form_index',
                                     description='Create/Edit the application form for the volunteers', icon='file text outline icon') }}
-                {{ dashboard_option('View Applicant Responses', 'admin.get_responses',
+                {{ d.dashboard_option('View Applicant Responses', 'admin.get_responses',
                                     description='View responses from the volunteers', icon='file text outline icon') }}
             </div>
         </div>
