--- a/app/templates/macros/nav_macros.html
+++ b/app/templates/macros/nav_macros.html
@@ -24,11 +24,7 @@
       ('main.index', config.APP_NAME, 'home'),
       ('main.about', 'About', 'info')
     ]%}
-    {% set user = [] %}
-    {% if current_user.is_authenticated %}
-      {% set user = ([(current_user.role.index + '.index', current_user.role.name + ' Dashboard', 'user')]) %}
-    {% endif %} 
-    {{ render_menu_items( endpoints +  user ) }}
+    {{ render_menu_items( endpoints ) }}
 {% endmacro %}
 
 {# This renders the right hand side of the navigation bar. If the user is logged in, it links to 
