--- a/app/templates/team/index.html
+++ b/app/templates/team/index.html
@@ -14,6 +14,7 @@
             <div class="ui top attached tabular menu">
                 <a class="item active" data-tab="create-team">Create Team</a>
                 <a class="item" data-tab="review-teams">Review Teams</a>
+                <a class="item" data-tab="refer"> Refer User</a>
             </div>
 
             <div class="ui bottom attached tab segment active" id="create-team" data-tab="create-team">
@@ -21,6 +22,9 @@
             </div>
             <div class="ui bottom attached tab segment" id="review-teams" data-tab="review-teams">
                 {% include 'team/review_teams.html' %}
+            </div>
+            <div class="ui bottom attached tab segment" id="refer" data-tab="refer">
+                {%include 'team/refer_candidate.html' %}
             </div>
         </div>
     </div>
