--- a/app/templates/account/index.html
+++ b/app/templates/account/index.html
@@ -12,6 +12,8 @@
                                     description='Refer a new candidate for consideration', icon='add user icon') }}
                 {{ d.dashboard_option('Find Teammates', 'account.find_teammates',
                                     description='See accepted users to find a teammates', icon='users icon') }}
+                {{ d.dashboard_option('Manage Your Teams', 'account.see_team',
+                                    description='See the teams you are a part of', icon='globe icon') }}
                 {{ d.dashboard_option('Edit Dates', 'account.edit_dates',
                                     description='Edit your available date ranges', icon='calendar icon') }}
             </div>
