done w/my stuff

--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -20,6 +20,8 @@
                                     description='Create/Edit the application form for the volunteers', icon='file text outline icon') }}
                 {{ d.dashboard_option('View Applicant Responses', 'admin.get_responses',
                                     description='View responses from the volunteers', icon='file text outline icon') }}
+                {{ d.dashboard_option('View All Teams', 'admin.view_all_teams',
+                                    description='View all current teams', icon='file text outline icon') }}
             </div>
         </div>
     </div>
