--- a/app/templates/account/edit_profile.html
+++ b/app/templates/account/edit_profile.html
@@ -16,6 +16,22 @@
 
             {{ f.begin_form(form, flashes) }}
 
+            <img id="profileImg" class="ui medium circular image" src="
+            {% if form.profile_pic.data != None %} 
+            {{ form.profile_pic.data }} 
+            {% else %} 
+            {{ url_for('static', filename="images/default_prof.png") }}
+            {% endif %}
+            "/>
+            <br><br>
+            <div>
+              <label for="file" class="ui icon button">
+                <i class="file icon"></i>
+                Upload new profile picture</label>
+              <input type="file" id="file" style="display:none">
+            </div>
+            <br><br>
+            {{ f.render_form_field(form.profile_pic) }}
             {{ f.render_form_field(form.degrees) }}
             {{ f.render_form_field(form.location) }}
             {{ f.render_form_field(form.experience_abroad) }}
@@ -40,4 +56,83 @@
             </form>
         </div>
     </div>
+  <script>
+    $('body').on('change', 'input:file', function() {
+      var file = $(this)[0].files[0];
+      getSignedRequest(file)
+    })
+    function getSignedRequest(file){
+      var xhr = new XMLHttpRequest();
+      xhr.open('GET', `/sign-s3?file-name=${file.name}&file-type=${file.type}`);
+      xhr.onreadystatechange = function() {
+        if(xhr.readyState === 4){
+          if(xhr.status === 200){
+            var response = JSON.parse(xhr.responseText);
+            console.log("response form json dumps: ", response);
+            uploadFile(file, response.data, response.url, response.url_upload)
+          }
+          else{
+            alert('Could not get signed URL.');
+          }
+        }
+      };
+      xhr.send();
+    }
+    function uploadFile(file, s3Data, url, urlUpload, fieldName){
+      // basic validation
+      var fileType = url.substring(url.lastIndexOf('.') + 1);
+      var xhr = new XMLHttpRequest();
+      xhr.upload.addEventListener("progress", updateProgress);
+      xhr.open('POST', urlUpload);
+      xhr.setRequestHeader('x-amz-acl', 'public-read');
+      var postData = new FormData();
+      for(key in s3Data.fields){
+        postData.append(key, s3Data.fields[key]);
+      }
+      postData.append('file', file);
+      console.log(file);
+      $('.ui.basic.modal')
+        .modal('show')
+      ;
+      function updateProgress (e) {
+        if (e.lengthComputable) {
+          var percentComplete = ((100*e.loaded)/e.total).toFixed(2);
+          var percentCompleteShort = ((100*e.loaded)/e.total).toFixed(0);
+          $('#progress').text(percentCompleteShort);
+        }
+      }
+      xhr.onreadystatechange = function()  {
+        if(xhr.readyState === 4){
+          if(xhr.status === 200 || xhr.status === 204) {
+            handleFunc(url);
+          }
+          else{
+            console.log("\n\n\nstatus: ", xhr.status);
+            alert('Could not upload file.');
+          }
+        }
+      };
+      xhr.send(postData);
+    }
+    function handleFunc(url) {
+      $("#profileImg").attr('src', url);
+      $("#profile_pic").val(url)
+    };
+  </script>
+  <div class="ui basic modal">
+    <div class="ui icon header">
+      <i class="upload icon"></i>
+      Upload Progress
+    </div>
+    <div class="content">
+      <h2><span id="progress"></span>%</h2>
+      <p>We are uploading your file!</p>
+    </div>
+    <div class="actions">
+      <div class="ui green ok inverted button">
+        <i class="checkmark icon"></i>
+        Dismiss
+      </div>
+    </div>
+  </div>
 {% endblock %}
